2023-08-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {odvicopy,odvitype,ofonts,overbmp}.test:
	Update.

2023-08-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {bad,charwd,check,help,level1,ligkern,odvicopy,odvitype,
	ofonts,omfonts,otangle,overbmp,realnum,repeat,selectfont,
	shorten,specialhex,version,vrepeat,yannis}.test:
	Make easier to test on Windows.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-01-10  Karl Berry  <karl@freefriends.org>

	* am/omegaware.am: do not silence tangle-sh.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-01-30  Karl Berry  <karl@freefriends.org>

	* odvicopy.web,
	* odvitype.web,
	* ofm2opl.web,
	* opl2ofm.web,
	* ovf2ovp.web,
	* ovp2ovf.web: \titlefalse rather than the obsolete \titlepage{F}.
	Found by Andreas Scherer.

2018-09-09  Karl Berry  <karl@tug.org>

	* ligkern.test,
	* odvicopy.test,
	* overbmp.test: LC_ALL=LANGUAGE=C.

2018-07-22  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* odvicopy.web: Sync with dvicopy.web change 2018-07-17 (typos).

2018-01-19  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ovp2ovf.web, ovp2ovf.ch: Throw an error and exit if OFMLEVEL
	undefined and char>0xff is used. This behavior is compatible
	with ovp2ovf C version.

2015-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.ch, ovp2ovf.ch: Send also real numbers to stderr,
	completing the change from 2015-01-11.

2015-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/omegaware.am: Fix dependencies for 'make check'.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/omegaware.am: Use $(tie_m).

2015-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* odvicopy.ch: Drop intcast().
	* odvitype.ch: Drop intcast().
	* ofm2opl.ch: Drop intcast().
	* opl2ofm.ch: Drop intcast().
	* ovf2ovp.ch: Drop intcast().
	* ovp2ovf.ch: Drop intcast().

2015-01-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
