@@ -22,17 +22,17 @@ OFMFONTS=".;./$tests"; export OFMFONTS
 
 ligfiles='ligall ligbch ligblb ligbdy'
 
+rc=0
+
 for f in $ligfiles; do
+  echo && echo "*** opl2ofm $f x$f"
+  $_wopl2ofm $srcdir/$tests/$f $tests/x$f || rc=1
 
-echo && echo "*** opl2ofm $f x$f"
-$_wopl2ofm $srcdir/$tests/$f $tests/x$f || rc=1
+  echo && echo "*** ofm2opl x$f x$f"
+  $_wofm2opl $tests/x$f $tests/x$f || rc=2
 
-echo && echo "*** ofm2opl x$f x$f"
-$_wofm2opl $tests/x$f $tests/x$f || rc=2
-
-echo && echo "*** diff $f.opl x$f.opl"
-diff $srcdir/$tests/$f.opl $tests/x$f.opl || rc=3
-
+  echo && echo "*** diff $f.opl x$f.opl"
+  diff $srcdir/$tests/$f.opl $tests/x$f.opl || rc=3
 done
 
 echo && echo "*** ovp2ovf ligblv xligblv xligblv"
