@@ -1,3 +1,7 @@
+2023-08-26  Karl Berry  <karl@freefriends.org>
+
+	* ligkern.test: protect against $rc being defined in the environment.
+
 2023-08-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* {odvicopy,odvitype,ofonts,overbmp}.test:
